--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://draggeontech.online/'
 languageCode = 'en-us'
-title = "Vipul Bhasin's blog on golang"
+title = "Vipul Bhasin's blog"
 theme = 'archie'
 copyright = '© Vipul'
 
@@ -10,17 +10,17 @@ pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
 [pagination]
-    pagerSize = 3
+    pagerSize = 4
 
 [params]
+	favicon = "https://img.icons8.com/officel/16/000000/chevron-right.png"
 	mode="toggle" # color-mode → light,dark,toggle or auto
-	useCDN=false # don't use CDNs for fonts and icons, instead serve them locally.
+	useCDN=true # don't use CDNs for fonts and icons, instead serve them locally.
 	subtitle = "Musings on adventures in golang"
 	mathjax = true # enable MathJax support
 	katex = true # enable KaTeX support
 
 # Social Tags
-
 [[params.social]]
 name = "GitHub"
 icon = "github"
