Add support for GA
Signed-off-by: Vipul Bhasin <vipulbhasin22@gmail.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,8 @@ pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
+googleAnalytics = "G-CJFB1MEE4L"
+
 [pagination]
     pagerSize = 4
 
