Add second post
Signed-off-by: Vipul Bhasin <vipulbhasin22@gmail.com>

--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,8 @@ pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 
+summaryLength = 20
+
 googleAnalytics = "G-CJFB1MEE4L"
 
 [pagination]
